Renamed lessondef to lesson and positioned underneath the new Curriculum type
